binary file encryption

--- a/README
+++ b/README
@@ -6,17 +6,23 @@
 xor-encryptor - encrypt text keyphrase
 
 # SYNOPSIS
-**xor-encryptor** -[e,d] -i {input_file} -o {output_file}
+**xor-encryptor** {-b} -[e,d] -k {key_file} -i {input_file} -o {output_file}
 
 # DESCRIPTION
 **xor-encryptor** encrypt/decrypt texts with the logical xor. It takes input from the input_file and output to output_file
 
 # OPTIONS
+**-b**
+: toggle binary file operations mode. off by default.
+
 **-e**
 : to encrypt
 
 **-d**
 : to decrypt
+
+**-k**
+: specify the keyfile
 
 **-i** *input_file*
 : specify the input file
@@ -25,8 +31,20 @@ xor-encryptor - encrypt text keyphrase
 : specify the output file
 
 # EXAMPLES
+**xor-encryptor**
+: Will ask if to encrypt/decrypt, keyphrase, input text and output all from/to the STDIN
+
+**xor-encryptor -e**
+: same as **xor-encryptor** but knows it is to encrypt
+
+**xor-encryptor -d -i inputfile**
+: will ask for key and will output in STDIN
+
 **xor-encryptor -e -i plaintext.txt -o cipher.txt**
 : Encrypts the content in *plaintext.txt* and saves it in *cipher.txt*
 
-**xor-encryptor -d -i ciphertext.txt -o plaintext.txt**
+**xor-encryptor -d -k keyfile -i ciphertext.txt -o plaintext.txt**
 : Decrypts the content in *ciphertext.txt* and saves it in *plaintext.txt*
+
+**xor-encryptor -b -k keyfile -i img.png -o enc_img.png**
+: Encrypts/Decrypts a binary file. if -k is not specified, it'll ask to input keyphrase from command prompt
